# SoROM

./: СРОМ.sln
.github/workflows /: tests.yml
СРОМ/: CMakeLists.txt  DoubleNumber.cpp  Numb.cpp  Numb.h  Numb_2.cpp  Test.h  Tests.cpp  main.cpp  test.cpp  test_runner.cpp  СРОМ.vcxproj  СРОМ.vcxproj.filters
